# minimin_trading_bot

./: .env.example  .gitignore  Hybrid Trend-Filter + Cross-Sectional Momentum Trading Strategy for the Roostoo SG vs HK Quant Hackathon.md  README.md  app.py  config.example.yaml  config.yaml  config.yaml.example  pyproject.toml  requirements.txt  vercel.json
api/: index.py
bot/: __init__.py  base.py  execution.py  indicators.py  market.py  ohlcv.py  price_store.py  regime.py  risk.py  runner.py
bot/backtest/: __init__.py  engine.py  report.py
bot/strategies/: __init__.py  bollinger_rsi.py  cross_sectional_momentum.py  example.py  hybrid_trend_cross_sectional.py  hybrid_trend_cross_sectional_throttled.py  momentum_20_50.py  utils.py
config/: __init__.py  settings.py
dashboard/: __init__.py  server.py
dashboard/static/: index.html
dashboard/static/css/: styles.css
dashboard/static/js/: api.js  app.js  chart.js  renderers.js  utils.js
roostoo/: __init__.py  auth.py  client.py  exceptions.py  models.py
scripts/: run_backtest.py  run_bot.py  setup_venv.bat  setup_venv.sh  sync_binance_historical.py  test_sdk.py  warmup_price_store.py
tests/: __init__.py  conftest.py  test_client.py
tests/bot/: __init__.py  test_backtest.py  test_base.py  test_hybrid_strategy.py  test_hybrid_throttled_strategy.py  test_ohlcv.py  test_price_store.py  test_regime.py  test_risk.py  test_strategies_utils.py
tests/bot/test_strategies/: __init__.py
tests/config/: test_settings.py
