[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roostoo"
version = "0.1.0"
description = "Python SDK for the Roostoo Public API (v3)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.scripts]
app = "dashboard.server:app"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
binance = [
    "binance-historical-data",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["roostoo*"]
